[gd_scene load_steps=9 format=3 uid="uid://dt867ndl8axqy"]

[ext_resource type="Script" path="res://game/gui/setting.gd" id="1_2onwm"]
[ext_resource type="LabelSettings" path="res://assets/fonts/gui_basic_font.tres" id="1_tt5mu"]
[ext_resource type="Texture2D" uid="uid://cq4iyyu53yohu" path="res://assets/sprites/UI/Square/SoundOn/Default.png" id="2_oakne"]
[ext_resource type="Texture2D" uid="uid://s1ub21o65aif" path="res://assets/sprites/UI/Square/Default.png" id="3_g6nvb"]
[ext_resource type="Texture2D" uid="uid://b46qpdaif7axk" path="res://assets/sprites/UI/Square/SoundOn/Hover.png" id="3_lrjit"]
[ext_resource type="Texture2D" uid="uid://bakctsfdsoa25" path="res://assets/sprites/UI/Square/Home/Default.png" id="4_me0tj"]
[ext_resource type="Texture2D" uid="uid://byjbrfxl3puhe" path="res://assets/sprites/UI/Square/Levels/Default.png" id="5_hafey"]
[ext_resource type="Texture2D" uid="uid://diassfrgn2j6n" path="res://assets/sprites/UI/Square/Levels/Hover.png" id="6_vhg4b"]

[node name="Setting" type="Control"]
light_mask = 2
texture_filter = 1
texture_repeat = 1
layout_mode = 3
anchors_preset = 0
size_flags_horizontal = 8
mouse_default_cursor_shape = 2
script = ExtResource("1_2onwm")

[node name="HBoxContainer2" type="PanelContainer" parent="."]
self_modulate = Color(1, 1, 1, 0)
show_behind_parent = true
layout_direction = 2
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -64.0
offset_bottom = 64.0
grow_horizontal = 0

[node name="VolumeBtn" type="TextureButton" parent="HBoxContainer2"]
light_mask = 2
texture_filter = 1
texture_repeat = 1
clip_contents = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_default_cursor_shape = 2
toggle_mode = true
texture_normal = ExtResource("2_oakne")
texture_pressed = ExtResource("3_g6nvb")
texture_hover = ExtResource("3_lrjit")
ignore_texture_size = true
stretch_mode = 0

[node name="RatioBtn" type="TextureButton" parent="HBoxContainer2"]
light_mask = 2
texture_filter = 1
texture_repeat = 1
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_default_cursor_shape = 2
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("4_me0tj")
texture_pressed = ExtResource("3_g6nvb")
ignore_texture_size = true
stretch_mode = 0

[node name="InfoBtn" type="TextureButton" parent="HBoxContainer2"]
light_mask = 2
texture_filter = 1
texture_repeat = 1
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
mouse_default_cursor_shape = 2
toggle_mode = true
texture_normal = ExtResource("4_me0tj")
texture_pressed = ExtResource("3_g6nvb")
ignore_texture_size = true
stretch_mode = 0

[node name="SettingBtn" type="TextureButton" parent="."]
light_mask = 2
texture_filter = 1
texture_repeat = 1
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -64.0
offset_bottom = 64.0
grow_horizontal = 0
size_flags_horizontal = 0
mouse_default_cursor_shape = 2
toggle_mode = true
texture_normal = ExtResource("5_hafey")
texture_hover = ExtResource("6_vhg4b")
ignore_texture_size = true
stretch_mode = 0

[node name="Poppin" type="Node2D" parent="."]
scale = Vector2(2.5, 2.5)

[node name="Popup" type="TextureRect" parent="Poppin"]
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2195.2
offset_top = -2150.4
offset_right = -1584.2
offset_bottom = -1452.4
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.75, 0.75)
pivot_offset = Vector2(300, 300)
size_flags_horizontal = 4
size_flags_vertical = 4
expand_mode = 1
stretch_mode = 4

[node name="Volume" type="VBoxContainer" parent="Poppin/Popup"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -232.0
offset_top = -20.0
offset_right = 232.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="Master" type="HSlider" parent="Poppin/Popup/Volume"]
layout_mode = 2
max_value = 1.0
step = 0.01
metadata/bus_index = 0
metadata/busIndex = 0

[node name="Label" type="Label" parent="Poppin/Popup/Volume/Master"]
layout_mode = 0
offset_top = -25.0
offset_right = 164.0
offset_bottom = 12.0
theme_override_font_sizes/font_size = 30
text = "MASTER"
label_settings = ExtResource("1_tt5mu")

[node name="Music" type="HSlider" parent="Poppin/Popup/Volume"]
layout_mode = 2
max_value = 1.0
step = 0.01
metadata/bus_index = 1
metadata/busIndex = 1

[node name="Label" type="Label" parent="Poppin/Popup/Volume/Music"]
layout_mode = 0
offset_top = -25.0
offset_right = 164.0
offset_bottom = 12.0
theme_override_font_sizes/font_size = 30
text = "MUSIC
"
label_settings = ExtResource("1_tt5mu")

[node name="SFX" type="HSlider" parent="Poppin/Popup/Volume"]
layout_mode = 2
max_value = 1.0
step = 0.01
metadata/bus_index = 2
metadata/busIndex = 2

[node name="Label" type="Label" parent="Poppin/Popup/Volume/SFX"]
layout_mode = 0
offset_top = -25.0
offset_right = 164.0
offset_bottom = 12.0
theme_override_font_sizes/font_size = 30
text = "SFX"
label_settings = ExtResource("1_tt5mu")

[node name="GameSFX" type="HSlider" parent="Poppin/Popup/Volume"]
layout_mode = 2
max_value = 1.0
step = 0.01
metadata/bus_index = 3
metadata/busIndex = 3

[node name="Label" type="Label" parent="Poppin/Popup/Volume/GameSFX"]
layout_mode = 0
offset_top = -25.0
offset_right = 164.0
offset_bottom = 12.0
theme_override_font_sizes/font_size = 30
text = "Game SFX"
label_settings = ExtResource("1_tt5mu")

[node name="Credit" type="TextureRect" parent="Poppin"]
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2195.0
offset_top = -2150.0
offset_right = -1203.0
offset_bottom = -1534.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.75, 0.75)
pivot_offset = Vector2(300, 300)
size_flags_horizontal = 4
size_flags_vertical = 4
expand_mode = 1

[node name="Credit" type="Label" parent="Poppin/Credit"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -382.933
offset_top = 18.9333
offset_right = 385.067
offset_bottom = 78.9333
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0.898039, 1)
theme_override_font_sizes/font_size = 50
text = "Space Chicken  Remake"
label_settings = ExtResource("1_tt5mu")
horizontal_alignment = 1

[node name="Content" type="Label" parent="Poppin/Credit/Credit"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -458.0
offset_top = 36.0
offset_right = 458.0
offset_bottom = 593.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0.898039, 1)
theme_override_font_sizes/font_size = 30
text = "Powered by Godot 4.2 Game Engine

Made By Nguyen Vuong Quang

Game Sfx and Texture are from Interaction studio 's Chicken Invader 4 and 5

BGM are from Zun's Touhou project

The rest of the assests are free asset on itch.io




"
label_settings = ExtResource("1_tt5mu")
horizontal_alignment = 1
autowrap_mode = 2

[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
[connection signal="toggled" from="HBoxContainer2/VolumeBtn" to="." method="_on_volume_btn_toggled"]
[connection signal="toggled" from="HBoxContainer2/RatioBtn" to="." method="_on_ratio_btn_toggled"]
[connection signal="toggled" from="HBoxContainer2/InfoBtn" to="." method="_on_info_btn_toggled"]
[connection signal="pressed" from="SettingBtn" to="." method="_on_setting_btn_pressed"]
